--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1071,7 +1071,7 @@ abbr[title]{cursor: help;}
 .tingle-modal__close:hover{color:#fff}
 .tingle-modal-box{position:relative;-ms-flex-negative:0;flex-shrink:0;margin-top:auto;margin-bottom:auto;width:90%;max-width:64rem;border-radius:4px;background:#fff;opacity:1;cursor:auto;will-change:transform,opacity}
 .tingle-modal-box__content{padding:2rem}
-.tingle-modal-box__footer{padding:1rem 2rem;width:auto;border-bottom-right-radius:4px;border-bottom-left-radius:4px;background-color:#f5f5f5;cursor:auto}
+.tingle-modal-box__footer{padding:1rem 2rem;width:auto;border-bottom-right-radius:4px;border-bottom-left-radius:4px;background-color:#f5f5f5;cursor:auto;position: sticky;}
 .tingle-modal-box__footer::after{display:table;clear:both;content:""}
 .tingle-modal-box__footer--sticky{position:fixed;bottom:-200px;z-index:10001;opacity:1;transition:bottom .3s ease-in-out .3s}
 .tingle-enabled{position:fixed;right:0;left:0;overflow:hidden}
